<resources>
    <string name="app_name">RAJO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rajo_logo">RAJO logo</string>
    <string name="welcome_to_rajo">Welcome to Rajo</string>
    <string name="headline">Save a child, save a nation!</string>
    <string name="get_started">Get Started</string>
    <string name="login_to_rajo">Login to Rajo</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="phone_number">Phone Number</string>
    <string name="guardian_phone_number">Enter Guardian\'s Phone Number</string>
    <string name="_25">+25</string>
    <string name="retrieve_guardian">Retrieve guardian</string>
    <string name="register_new_guardian">Register new guardian</string>
    <string name="guardian_upload_form">Guardian Upload Form</string>
    <string name="fill_in_the_details">Fill in the details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="location">Location</string>
    <string name="save">Save</string>
    <string name="children">Children</string>
    <string name="add_child">Add a child</string>
    <string name="register_a_child">Register a child</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="date_of_birth_error">Date of birth is required</string>
    <string name="six_months">0–6\n months</string>
    <string name="twelve_months">6–12\n months</string>
    <string name="eighteen_months">12–18\n months</string>
    <string name="submit">Submit</string>
    <string name="update_records">Update Records</string>
    <string name="date_taken">Date Taken</string>
    <string name="status">Status</string>
    <string name="vaccine">Vaccine</string>
    <string name="next_due_date">Next Due Date</string>
    <string name="date_administered">Date Administered</string>
    <string name="select_a_vaccine">Select a vaccine</string>
    <string name="login_failed">Failed</string>
    <string name="incorrect_details">Incorrect details</string>
    <string name="login_successful">Login Successful</string>
    <string name="phone_number_is_required">Phone number is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="guardian_non_existent">Guardian not found!</string>
    <string name="guardian_children_nonexistent">Guardian has no children</string>
    <string name="location_nonexistent">Cannot retrieve locations</string>
    <string name="children_nonexistent">Guardian has no children</string>
</resources>