<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".guardian.RetrieveGuardianFragment"
    android:orientation="vertical">

    <ImageView
        android:layout_width="290dp"
        android:layout_height="262dp"
        android:layout_marginStart="-90dp"
        android:layout_marginTop="-86dp"
        android:rotation="154"
        android:src="@drawable/elipsis" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/guardian_phone_number"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/main_color"
        android:textSize="18sp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutGuardianPhoneNumber"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:hint="@string/phone_number"
        app:errorEnabled="true"
        app:boxStrokeColor="@color/tfBorder"
        app:prefixText="@string/_25"
        tools:ignore="HardcodedText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tfGuardianPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btRetrieveGuardian"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:text="@string/retrieve_guardian"/>
    <TextView
        android:id="@+id/txtRegisterNewGuardian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/register_new_guardian"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"/>




</LinearLayout>