<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".landingpage.LandingPageFragment">


    <ImageView
        android:layout_width="290dp"
        android:layout_height="262dp"
        android:layout_marginStart="-90dp"
        android:layout_marginTop="-86dp"
        android:rotation="154"
        android:src="@drawable/elipsis" />

    <ImageView
        android:id="@+id/rajo_logo"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/rajo_logo"
        android:src="@drawable/rajologo" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/welcome_to_rajo"
        android:textColor="@color/main_color"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/hero_section"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/card_bg"
        android:elevation="4dp"
        app:cardCornerRadius="1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/headline"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="192dp"
            android:layout_height="170dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/rajo_logo"
            android:src="@drawable/langing_page_hero" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btGetStarted"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="72dp"
        android:text="@string/get_started" />

</LinearLayout>