<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".children.RegisterChildFragment">

   <com.google.android.material.appbar.AppBarLayout
       android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tabRegisterChild"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="0dp"
            app:layout_collapseMode="pin"
            app:navigationIcon="@drawable/navigate_up"
            app:title="@string/register_a_child"
            app:titleCentered="true"
            app:titleTextAppearance="@style/TextAppearance.App.TitleMedium" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/poppins_light"
            android:text="@string/fill_in_the_details"
            android:textSize="13sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutFirstName"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:hint="@string/first_name"
            app:boxStrokeColor="@color/tfBorder"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/icon_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutLastName"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:hint="@string/last_name"
            app:boxStrokeColor="@color/tfBorder"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/icon_user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/layoutDOB"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            app:cardCornerRadius="4dp"
            app:strokeColor="?attr/colorOutline"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="8dp"
                    android:contentDescription="@string/date_of_birth"
                    android:src="@drawable/icon_calendar" />

                <TextView
                    android:id="@+id/tVDOB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_margin="8dp"
                    android:text="@string/date_of_birth"
                    android:textSize="16sp" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:id="@+id/layoutGender"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:hint="@string/gender"
            app:boxStrokeColor="@color/tfBorder"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/icon_gender">

            <AutoCompleteTextView
                android:id="@+id/atGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                app:simpleItems="@array/gender_list" />

        </com.google.android.material.textfield.TextInputLayout>
        <FrameLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btSaveChild"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/save" />
            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/genderProgressIndicator"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_horizontal"
                android:indeterminate="true"/>
        </FrameLayout>


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>