<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".children.immunization.TwelveToEighteenMonthsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#D9D9D9"
            android:fontFamily="@font/poppins_regular"
            android:padding="8dp"
            android:text="@string/vaccine"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#D9D9D9"
            android:fontFamily="@font/poppins_regular"
            android:padding="8dp"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="#D9D9D9"
            android:fontFamily="@font/poppins_regular"
            android:padding="8dp"
            android:text="@string/date_taken"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTwelveToEighteenMonths"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_immunization_details"
            android:visibility="visible"/>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/twelveToEighteenCircularProgressIndicator"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:indeterminate="true" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/next_due_date"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#D9D9D9"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tvNextDueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/icon_calendar" />

            <TextView
                android:id="@+id/txtVNextDueDate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="@color/black" />
        </LinearLayout>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btLogin"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/update_records" />

</LinearLayout>