<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context=".children.immunization.ZeroToSixMonthsFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/vaccine"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:background="#D9D9D9"
            android:padding="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/status"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:background="#D9D9D9"
            android:padding="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/date_taken"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:background="#D9D9D9"
            android:padding="8dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvZeroToSixMonths"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_immunization_details" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_due_date"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#D9D9D9"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_calendar"
                android:padding="8dp"/>
            <TextView
                android:id="@+id/tvNextDueDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="22/03/2023"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:layout_gravity="center_vertical"
                android:padding="8dp"
                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>