<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <View
            android:id="@+id/active_dot"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@drawable/active_dot_bg" />

        <View
            android:layout_width="32dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="@color/black" />

        <View
            android:id="@+id/inactive_dot"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@drawable/inactive_dot_bg" />

        <View
            android:layout_width="32dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="@color/black" />

        <View
            android:id="@+id/inactive_dot2"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@drawable/inactive_dot_bg" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="4dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six_months"
            android:textSize="11sp"
            android:padding="2dp"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twelve_months"
            android:textSize="11sp"
            android:padding="2dp"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eighteen_months"
            android:textSize="11sp"
            android:padding="2dp"
            android:fontFamily="@font/poppins_light"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>
